--- a/home.css
+++ b/home.css
@@ -97,12 +97,13 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
   bottom: 0;
   width: 100%;
   height: 175px;
-  background-color: #5F7078;
+  background-color:black;
 
   color: white;
-  padding-top: 40px;
-  font-size: 20px;
+  padding-top: 25px;
+  font-size: 25px;
   text-align: center;
+  margin-top: 100px;
 }
 
 .footer .author {
@@ -111,10 +112,21 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
 }
 
 .footer .middle {
+  font-size: 30px;
+}
+
+.footer a {
+  color: white;
   font-size: 25px;
 }
 
-.footer-2 {
+.footer a:hover {
+  color: white;
+  font-size: 25px;
+  text-decoration: none;
+}
+
+/* .footer-2 {
   position: relative;
   width: 100%;
   height: 60px;
@@ -131,10 +143,14 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
   width: 100%;
   height: 7px;
   background-color: #13AEFC;
-}
+} */
 
 .fa-facebook-f {
   color: white;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  font-size: 25px;
 }
 
 .fa-angle-right {
@@ -143,6 +159,28 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
   padding-bottom: 0px;
 }
 
+
+/* home shop carousel */
+.container-3 {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.home-shop:hover {
+  text-decoration: none;
+  color: black;
+  padding-top: 0px;
+}
+
+.home-shop-text {
+  font-size: 20px;
+  padding-bottom: 20px;
+}
+
+.test {
+  padding: -9px;
+  margin: 0px;
+}
 
 @media only screen and (min-width: 600px) {
   #home-display-title {
@@ -216,7 +254,6 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
 
 .home-img-links {
   font-size: 25px;
-  margin: 0px;
   color: black; 
 }
 
