--- a/gallery.css
+++ b/gallery.css
@@ -17,11 +17,24 @@
   margin: 5px;
 }
 
+@media (min-width: 1200px) {
+  #photos {
+    -moz-column-count:    3;
+    -webkit-column-count: 3;
+    column-count:         3;
+    }
+  .container-photos {
+    padding-top: 5px;
+    width: 75%
+  }
+}
+
+
 @media (max-width: 1200px) {
   #photos {
-  -moz-column-count:    4;
-  -webkit-column-count: 4;
-  column-count:         4;
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
   }
 }
 @media (max-width: 1000px) {
@@ -29,6 +42,10 @@
   -moz-column-count:    3;
   -webkit-column-count: 3;
   column-count:         3;
+  }
+  .container-photos {
+    padding-top: 5px;
+    width: 95%
   }
 }
 @media (max-width: 800px) {
@@ -44,4 +61,62 @@
   -webkit-column-count: 1;
   column-count:         1;
   }
+}
+
+.modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  position: fixed;
+}
+
+.modal-content {
+  text-align: center;
+  height: 100%;
+  border-radius: 0px;
+  margin: 0px;
+  padding: 0px;
+  background-color: rgba(255, 255, 255, 0.90);
+}
+
+.icon {
+  color: rgba(0,0,0,1);
+  position: absolute;
+  top: 15px;
+  right: 30px;
+  font-size: 35px;
+}
+
+.carousel-inner .item {
+  padding-bottom: 30px;
+  overflow: hidden;
+  height: calc(100vh - 100px);
+  padding-right: 15%;
+  padding-left: 15%;
+}
+
+#myCarousel img {
+  max-height: 100%;  
+  max-width: 100%; 
+  top: 0;  
+  bottom: 0;  
+  left: 0;  
+  right: 0;  
+  margin: auto;
+  position: absolute;
+}
+
+.modal-header {
+  border: none;
+  padding-bottom: 30px;
+}
+
+.carousel-control.left, .carousel-control.right {
+  text-align: center;
+  background-image: none;
+  vertical-align: middle;
+  top: 45%;
+  color: black;
+  font-size: 30px;
 }
