--- a/home.css
+++ b/home.css
@@ -27,7 +27,6 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
 
 /* navbar MAKE RESPONSIVE - actually fixed is okay bc want it to be set!! */
 /* change the toggle thing to collapse at tablet size*/
-
 /* Whole navbar */
 .navbar {
   padding-top: 25px;
@@ -91,8 +90,54 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
   padding-top: 30px;
 }
 
-/* footer */
 .footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 175px;
+  background-color: white;
+
+  color: black;
+  padding-top: 35px;
+  padding-left: 10%;
+  font-size: 15px;
+  text-align: left;
+  margin-top: 100px;
+
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.footer-section {
+  margin-bottom: 10px;
+  padding-top: 10px;
+}
+
+.footer-sub-section {
+  font-size: 10px;
+  text-align: left;
+}
+
+.footer-sub-section div {
+  color: black;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.footer-sub-section a {
+  color: black;
+}
+
+
+.footer-sub-section a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+
+
+
+/*  OLD footer */
+/* .footer {
   position: relative;
   bottom: 0;
   width: 100%;
@@ -124,7 +169,7 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
   color: white;
   font-size: 25px;
   text-decoration: none;
-}
+} */
 
 /* .footer-2 {
   position: relative;
@@ -145,13 +190,13 @@ CAN HIDE ELEMENTS IN CERTAIN SCREENS AND ALSO CHANGE FOR PORTRAIT/LANDSCAPE
   background-color: #13AEFC;
 } */
 
-.fa-facebook-f {
+/* .fa-facebook-f {
   color: white;
   position: absolute;
   bottom: 15px;
   right: 15px;
   font-size: 25px;
-}
+} */
 
 .fa-angle-right {
   padding-left: 10px;
