--- a/discography.css
+++ b/discography.css
@@ -3,28 +3,131 @@
   font-size: 55px;
   padding-top: 5px;
   padding-left: 0px;
+  padding-bottom: 10px;
 }
 
-.dropdown-button {
-  padding-top: 15px;
-  padding-bottom: 0px;
-}
 
-.dropdown-button-1 {
-  float: right;
-  padding-right: 35px;
-  padding-left: 35px;
-  margin-right: 25px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-}
+@media only screen and (min-width: 768px) {
 
-.dropdown-button-2 {
-  float: left;
-  padding-left: 35px;
-  padding-right: 35px;
-  margin-left: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-}
+  .dropdown-button {
+    padding-top: 15px;
+    padding-bottom: 0px;
+  }
+
+  .dropdown-button-1 {
+    float: right;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-right: 25px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    position: relative;
+  }
+
+  /* have to manually align */
+  .dropdown-menu {
+    width: 190px;
+    float: left;
+    margin-left: -31px;
+    padding: 0px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 0px;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 15px;
+  }
+
+  .dropdown-button-2 {
+    float: left;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  .dropdown-menu-2 {
+    width: 186px;
+    float: left;
+    margin-left: -51px;
+    padding: 0px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 0px;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 15px;
+  }
+  .modal-body {
+    /* display: flex;
+    flex-direction: row; */
+    padding-top: 8%;
+  }
+  
+  /* .modal-body > [class^="col-"].modal-album,
+  .modal-body > [class*=" col-"].modal-album {
+    display: flex;
+    align-items: center;
+  } */
+  
+  .img-thumbnail.img-album {
+    border: none;
+    padding: 0px;
+    padding-right: 50px;
+    float: right;
+  }
+  
+  .modal-album {
+    float: left;
+    text-align: left;
+  }
+  
+  .modal-album-title {
+    font-size: 30px;
+    padding-left: 50px;
+  }
+  
+  .modal-album-body {
+    padding-left: 50px;
+  }
+} 
+
+
+@media only screen and (max-width: 768px) {
+  .dropdown-button {
+    padding-bottom: 10px;
+    text-align: center;
+    display: block;
+  }
+
+  .navbar-nav-drop-1 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  .navbar-nav-drop-2 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .modal-body {
+    padding-top: 8%;
+  }
+
+  
+  .img-thumbnail.img-album {
+    border: none;
+    padding: 0px;
+  }
+  
+  .modal-album-title {
+    padding-top: 20px;
+    font-size: 30px;
+  }
+} 
+
 
 .container-disc {
   text-align: center;
@@ -48,3 +151,50 @@
   font-size: 20px;
   padding-bottom: 20px;
 }
+
+.nav > li.dropdown > a:focus, .nav > li.dropdown > a:hover  {
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.nav > li.dropdown > a > ul.dropdown-menu > a:hover, .nav > li.dropdown > a > ul.dropdown-menu > a:focus {
+  color: #5499C7;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.nav > li.dropdown > a {
+  color: #5499C7;
+  font-size: 20px;
+}
+
+.modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  position: fixed;
+}
+
+.modal-content {
+  text-align: center;
+  height: 100%;
+  border-radius: 0px;
+  margin: 0px;
+  padding: 0px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.modal-header {
+  border: none;
+  padding-bottom: 30px;
+}
+
+.icon {
+  color: rgba(0,0,0,1);
+  position: absolute;
+  top: 15px;
+  right: 30px;
+  font-size: 35px;
+}
+
